Configuration applied so as a simple JavaFX application to run.